# eqtools

./: .gitignore  .readthedocs.yaml  AFileReader.py  CModEFIT.py  EFIT.py  EqTools.py  PFileReader.py  README.md  __init__.py  _tricub.c  core.py  eqdskReader.py  pyproject.toml  setup.py  trispline.py
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: conf.py  eqtools.rst  index.rst  modules.rst
eqtools/: .gitignore  AFileReader.py  AUGData.py  CModEFIT.py  D3DEFIT.py  EFIT.py  FromArrays.py  NSTXEFIT.py  NTSXEFIT.py  PFileReader.py  SolovievEFIT.py  TCVLIUQE.py  __init__.py  _tricub.c  _tricub.h  _tricub.pyf  _tricubmodule.c  afilereader.py  core.py  core.py~  eqdskReader.py  eqdskreader.py  eqdskreader.py~  filewriter.py  pfilereader.py  trispline.py
tests/: SolovievEFIT.py  demo.py  test.py  test_data.pkl  unittests.py
